--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
-alembic==0.9.9
-click==6.7
-Flask==0.12.2
-Flask-Login==0.4.1
-Flask-Migrate==2.1.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-itsdangerous==0.24
-Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.0
-mysqlclient==1.3.12
-pkg-resources==0.0.0
-python-dateutil==2.7.2
-python-editor==1.0.3
+adium-theme-ubuntu==0.3.4
+asn1crypto==0.24.0
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.2.2
+enum34==1.1.6
+gyp==0.1
+idna==2.6
+ipaddress==1.0.21
+ordereddict==1.1
+pathlib2==2.1.0
+pbr==1.8.0
+pipenv==11.10.0
+pycparser==2.18
+pygobject==3.20.0
+pyOpenSSL==17.5.0
+requests==2.18.4
+shadowsocks==2.8.2
 six==1.11.0
-SQLAlchemy==1.2.6
-Werkzeug==0.14.1
-WTForms==2.1
+stevedore==1.12.0
+unity-lens-photos==1.0
+urllib3==1.22
+vboxapi==1.0
+virtualenv==15.0.1
+virtualenv-clone==0.3.0
+virtualenvwrapper==4.3.1
