--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,13 @@ Faker==0.8.13
 Flask==0.12.2
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
+Flask-Sockets==0.2.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gevent==1.2.2
+gevent-websocket==0.10.1
+greenlet==0.4.13
+gunicorn==19.8.1
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
@@ -23,6 +28,7 @@ Mako==1.0.7
 MarkupSafe==1.0
 mysqlclient==1.3.12
 parsel==1.4.0
+pkg-resources==0.0.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
@@ -31,6 +37,7 @@ pyOpenSSL==17.5.0
 python-dateutil==2.7.2
 python-editor==1.0.3
 queuelib==1.5.0
+redis==2.10.6
 Scrapy==1.5.0
 service-identity==17.0.0
 six==1.11.0
